# UAB-WiFi-Dataset-Analysis

./: .gitattributes  .gitignore  README.md  TYPING_STATUS.md  anonymized_data  pyproject.toml  pyrightconfig.json  requirements.txt
.streamlit/: config.toml
.venv311/: pyvenv.cfg
dashboard/: conflictivity_dashboard.py  conflictivity_dashboard_interpolation.py  conflictivity_dashboard_interpolation_simulator.py  dash_app.py  dashboard_voronoi_simulator.py
elies/: aina_dashboard.py  analyze_client_timeslots.ts  count_unique_aps.ts  integrated_dashboard.py
experiments/: README.md
experiments/elies/: aina_dashboard.py
experiments/pablo/: conflictivity_dashboard_interpolation.py
experiments/polandreu/: test.py
experiments/polcorresa/: conflictivity_dashboard.py  conflictivity_dashboard_interpolation_simulator.py  dash_app.py  dashboard_voronoi_simulator.py  preview_conflictivity_map.py  (+1 more)
pabloCalo/: hourly_ap_graphs.ipynb
polandreu/: test.py  visualitzador.py
polcorresa/: ap_problem_analysis.ipynb  network_usage_interactive.ipynb
preview/: conflictivity_heatmap.html  conflictivity_points.html  conflictivity_top.html
research/: basic-analysis.ipynb  dataset-research.ipynb
scripts/: benchmark_dashboard_load.py  debug_simulator_logic.py  optimize_simulation_params.py  profile_dashboard_direct.py  profile_dashboard_startup.py  setup_venv.sh
simulator/: __init__.py  config.py  scoring.py  stress_profiler.py
src/: integrated_dashboard.py
starter_kits/: 01_rookie_basic_analysis.ipynb  02_ap_timeslot_analysis.ipynb  timeslots-analysis-dirty-dataset.ipynb
(+23 files in other folders)
