[project]
name = "uab-wifi-dataset-analysis"
version = "0.1.0"
description = "Dashboards, simulators, and research utilities for exploring UAB WiFi datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Barretina Negra" }
]
dependencies = [
  "pandas>=2.1.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "plotly>=5.17.0",
  "folium>=0.15.0",
  "streamlit>=1.31.0",
  "dash>=2.18.0",
  "python-dotenv>=1.0.0",
  "shapely>=2.0.0",
  "geopandas>=0.14.0"
]

[project.optional-dependencies]
notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.25.0",
  "ipywidgets>=8.1.0",
  "networkx>=3.2.0"
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv]
package = false

